[project]
name = "odoo-addons-oca-account-financial-tools"
version = "18.0.20241230.0"
dependencies = [
    "odoo-addon-account_journal_restrict_mode==18.0.*",
    "odoo-addon-account_usability==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
