[project]
name = "odoo-addons-oca-account-financial-tools"
version = "18.0.20250131.0"
dependencies = [
    "odoo-addon-account_fiscal_position_vat_check==18.0.*",
    "odoo-addon-account_fiscal_year==18.0.*",
    "odoo-addon-account_journal_restrict_mode==18.0.*",
    "odoo-addon-account_move_name_sequence==18.0.*",
    "odoo-addon-account_move_post_date_user==18.0.*",
    "odoo-addon-account_usability==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
